// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`the H4 component should accept and render passed in styles 1`] = `
.c0 {
  font-size: 1rem;
  font-weight: 700;
  line-height: 1.5rem;
  margin: initial;
}

<h4
  className="c0 sc-17mtry8-2 bKsXwZ"
>
  Salmon text
</h4>
`;

exports[`the H4 component should render 1`] = `
.c0 {
  font-size: 1rem;
  font-weight: 700;
  line-height: 1.5rem;
  margin: initial;
}

<h4
  className="c0 sc-17mtry8-2 bKsXwZ"
>
  Default H4 text
</h4>
`;

exports[`the H4 component should render a loading state 1`] = `
.c0 {
  background: #A5A5A5;
  border-radius: 5px;
  display: block;
  height: 1rem;
}

.c1 {
  height: 1rem;
  margin: calc(1.5rem - 1rem) 0;
}

<mark
  className="c0 show-loading-animation ra2rjz-1 c1 line custom-placeholder"
/>
`;

exports[`the H4 component should render a loading state via context 1`] = `
.c0 {
  background: #A5A5A5;
  border-radius: 5px;
  display: block;
  height: 1rem;
}

.c1 {
  height: 1rem;
  margin: calc(1.5rem - 1rem) 0;
}

<mark
  className="c0 show-loading-animation ra2rjz-1 c1 line custom-placeholder"
/>
`;

exports[`the H4 component should render a loading state with vertical rhythm (withMargins) 1`] = `
.c0 {
  background: #A5A5A5;
  border-radius: 5px;
  display: block;
  height: 1rem;
}

.c1 {
  height: 1rem;
  margin: 0.99rem 0 0.75rem 0;
}

<mark
  className="c0 show-loading-animation ra2rjz-1 c1 line custom-placeholder"
/>
`;

exports[`the H4 component should render with vertical rhythm (withMargins) 1`] = `
.c0 {
  font-size: 1rem;
  font-weight: 700;
  line-height: 1.5rem;
  margin: 0.99rem 0 0.75rem 0;
}

<h4
  className="c0 sc-17mtry8-2 bKsXwZ"
>
  H4 text with vertical rhythm styled via margin.
</h4>
`;
